force-app/main/default/objects/Archive_Config__c/Archive_Config__c.object-meta.xml
<CustomObject>
    <description>Defines what, when, and how a source object is archived into a Big Object.</description>
    <label>Archive Config</label>
    <nameField>
        <label>Archive Config Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archive Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>