force-app/main/default/objects/Archive_Config__c/fields/Age_Field__c.field-meta.xml
<CustomField>
    <fullName>Age_Field__c</fullName>
    <description>Date/Datetime field used for age-based criteria (e.g., ClosedDate).</description>
    <label>Age Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>