force-app/main/default/objects/Archive_Config__c/fields/Age_Threshold_Days__c.field-meta.xml
<CustomField>
    <fullName>Age_Threshold_Days__c</fullName>
    <description>Archive records older than this many days (based on Age Field).</description>
    <label>Age Threshold (Days)</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>