force-app/main/default/objects/Archive_Config__c/fields/Big_Object_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Big_Object_Api_Name__c</fullName>
    <description>Generated Big Object API name (e.g., Archive_Case__b).</description>
    <label>Big Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>