force-app/main/default/objects/Archive_Config__c/fields/Criteria_Type__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Type__c</fullName>
    <description>How records are selected for archival.</description>
    <label>Criteria Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Age</fullName>
                <default>true</default>
                <label>Age</label>
            </value>
            <value>
                <fullName>SOQL_Filter</fullName>
                <label>SOQL Filter</label>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>