force-app/main/default/objects/Archive_Config__c/fields/Delete_After_Archive__c.field-meta.xml
<CustomField>
    <fullName>Delete_After_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hard-delete source records after a verified Big Object write.</description>
    <label>Delete After Archive</label>
    <type>Checkbox</type>
</CustomField>