force-app/main/default/objects/Archive_Config__c/fields/Filter_Logic__c.field-meta.xml
<CustomField>
    <fullName>Filter_Logic__c</fullName>
    <description>Validated, parameterized SOQL WHERE fragment for filter-based criteria.</description>
    <label>Filter Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>