force-app/main/default/objects/Archive_Config__c/fields/Generation_Status__c.field-meta.xml
<CustomField>
    <fullName>Generation_Status__c</fullName>
    <description>Status of the metadata generation for this config.</description>
    <label>Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>