force-app/main/default/objects/Archive_Config__c/fields/Last_Archive_Run__c.field-meta.xml
<CustomField>
    <fullName>Last_Archive_Run__c</fullName>
    <description>Timestamp of the most recent archive batch completion for this configuration.</description>
    <label>Last Archive Run</label>
    <type>DateTime</type>
</CustomField>