force-app/main/default/objects/Archive_Config__c/fields/Last_Run_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Run_Status__c</fullName>
    <description>Outcome of the most recent archive run (Success, Partial, Failed).</description>
    <label>Last Run Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>