force-app/main/default/objects/Archive_Config__c/fields/List_View_Fields__c.field-meta.xml
<CustomField>
    <fullName>List_View_Fields__c</fullName>
    <description>CSV of source fields flattened into Big Object columns for list views.</description>
    <label>List View Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>