force-app/main/default/objects/Archive_Config__c/fields/Restore_Profile__c.field-meta.xml
<CustomField>
    <fullName>Restore_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Restore behavior used when rehydrating archived records.</description>
    <label>Restore Profile</label>
    <referenceTo>Restore_Profile__c</referenceTo>
    <relationshipLabel>Archive Configs</relationshipLabel>
    <relationshipName>Archive_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>