force-app/main/default/objects/Archive_Config__c/fields/Schedule_Cron__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Cron__c</fullName>
    <description>CRON expression for the scheduled archive run.</description>
    <label>Schedule CRON</label>
    <length>40</length>
    <type>Text</type>
</CustomField>