force-app/main/default/objects/Archive_Config__c/fields/Schedule_Paused__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Paused__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >True when the archive schedule has been intentionally paused from the scheduler component. Distinguishes a paused schedule from one that was never created.</description>
    <label>Schedule Paused</label>
    <type>Checkbox</type>
</CustomField>