force-app/main/default/objects/Archive_Config__c/fields/Source_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Object__c</fullName>
    <description>API name of the object to archive.</description>
    <label>Source Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>