force-app/main/default/objects/Archive_Config__c/fields/Total_Records_Archived__c.field-meta.xml
<CustomField>
    <fullName>Total_Records_Archived__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Running total of records archived to the Big Object across all runs.</description>
    <label>Total Records Archived</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>